package onion.lifeproducts.rms.domain;

/**
 * Represents the recycling category of a material.
 */
public enum RecyclingCategory {

    RECYCLABLE,
    PARTIALLY_RECYCLABLE,
    NON_RECYCLABLE
}